--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.argz.issue66_java">
 
     <application
@@ -22,10 +22,10 @@
             </intent-filter>
         </activity>
 
-<!--        <provider-->
-<!--            android:name="com.google.firebase.provider.FirebaseInitProvider"-->
-<!--            android:authorities="${applicationId}.firebaseinitprovider"-->
-<!--            tools:node="remove"/>-->
+        <provider
+            android:name="com.google.firebase.provider.FirebaseInitProvider"
+            android:authorities="${applicationId}.firebaseinitprovider"
+            tools:node="remove"/>
     </application>
 
 </manifest>
